--- a/tb.html
+++ b/tb.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <style>
         body { margin: 0; overflow: hidden; }
-        canvas { display: block; }
+        canvas { display: block; width: 100vw; height: 100vh; }
     </style>
 </head>
 <body>
