--- a/tb.html
+++ b/tb.html
@@ -8,8 +8,10 @@
     body { margin: 0; }
     canvas { display: block; }
   </style>
+  <!-- THREE.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r146/three.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/plist/3.0.1/plist.min.js"></script>
+  <!-- plist.js -->
+  <script src="https://cdn.jsdelivr.net/npm/plist@3.0.1/dist/plist.min.js"></script>
 </head>
 <body>
 <script>
