--- a/tb.html
+++ b/tb.html
@@ -9,7 +9,7 @@
     canvas { display: block; }
   </style>
   <!-- THREE.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r146/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
   <!-- plist.js -->
   <script src="https://cdn.jsdelivr.net/npm/plist@3.0.1/dist/plist.min.js"></script>
 </head>
