--- a/fn/index.html
+++ b/fn/index.html
@@ -11,7 +11,7 @@
         <h1>Astrophotography Collection</h1>
         <p>Welcome to my collection of astrophotography images. Each one is named FN # (Fieldnomer).</p>
     </header>
-<b>Please note: All these images are taken with Stellarium Web, and not with an actual telescope. The ones that aren't, will have an S below them.</b>
+<b>Please note: Almost all these images are taken with Stellarium Web, and not with an actual telescope. The ones that aren't taken on Stellarium Web, will have an S below them.</b>
     <section class="gallery">
         <div class="image-card">
             <img src="image1.jpg" alt="FN #1" />
