--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="dswr.js"></script>
 </head>
 <body>
+    <a href="/fn/">Visit My Collection of Astrophotography Images</a>
     <h1>Welcome To Sticklabs!</h1>
     <img src="img/default.gif">.
 
