--- a/fn/index.html
+++ b/fn/index.html
@@ -5,27 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astrophotography Collection</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" defer></script> <!-- Link to external JavaScript file -->
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Astrophotography Collection</h1>
         <p>Welcome to my collection of astrophotography images. Each one is named FN # (Fieldnomer).</p>
     </header>
-
-    <b>Please note: Almost all these images are taken with Stellarium Web, and not with an actual telescope. The ones that aren't taken on Stellarium Web, will have an S below them.</b>
-    
-    <!-- Calendar for selecting a date -->
     <section class="calendar">
         <label for="date-picker">Select a date to view images taken on that day:</label>
         <input type="date" id="date-picker" onchange="filterImagesByDate()" />
     </section>
-
-    <!-- Gallery section where images will be displayed -->
     <section class="gallery" id="image-gallery">
-        <!-- Images will be displayed here based on date selection -->
+        <!-- Dynamically generated images will appear here -->
     </section>
-
     <footer>
         <p>Astrophotography by (Prefer Not To Say). All rights reserved.</p>
     </footer>
