--- a/fn/index.html
+++ b/fn/index.html
@@ -5,20 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astrophotography Collection</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Astrophotography Collection</h1>
         <p>Welcome to my collection of astrophotography images. Each one is named FN # (Fieldnomer).</p>
+        <p class="note">
+            Please note: Almost all these images are taken with Stellarium Web, and not with an actual telescope. 
+            The ones that aren't taken on Stellarium Web will have an <b>S</b> below them.
+        </p>
     </header>
-    <section class="calendar">
-        <label for="date-picker">Select a date to view images taken on that day:</label>
-        <input type="date" id="date-picker" onchange="filterImagesByDate()" />
+
+    <section class="gallery">
+        <div class="image-card">
+            <img src="images/image1.jpg" alt="FN #1">
+            <p>FN #1: Star NGC 1750 1213</p>
+        </div>
+        <div class="image-card">
+            <img src="images/image2.jpg" alt="FN #2">
+            <p>FN #2: Satellite STARLINK-31604 (Fieldnomer Satellite)</p>
+        </div>
+        <div class="image-card">
+            <img src="images/image3.jpg" alt="FN #3">
+            <p>FN #3: Star Cluster Pleiades</p>
+        </div>
     </section>
-    <section class="gallery" id="image-gallery">
-        <!-- Dynamically generated images will appear here -->
-    </section>
+
     <footer>
         <p>Astrophotography by (Prefer Not To Say). All rights reserved.</p>
     </footer>
