--- a/fn/index.html
+++ b/fn/index.html
@@ -18,15 +18,15 @@
 
     <section class="gallery">
         <div class="image-card">
-            <img src="images/image1.jpg" alt="FN #1">
+            <img src="image1.jpg" alt="FN #1">
             <p>FN #1: Star NGC 1750 1213</p>
         </div>
         <div class="image-card">
-            <img src="images/image2.jpg" alt="FN #2">
+            <img src="image2.jpg" alt="FN #2">
             <p>FN #2: Satellite STARLINK-31604 (Fieldnomer Satellite)</p>
         </div>
         <div class="image-card">
-            <img src="images/image3.jpg" alt="FN #3">
+            <img src="image3.jpg" alt="FN #3">
             <p>FN #3: Star Cluster Pleiades</p>
         </div>
     </section>
