--- a/fn/index.html
+++ b/fn/index.html
@@ -19,15 +19,15 @@
     <section class="gallery">
         <div class="image-card">
             <img src="image1.jpg" alt="FN #1">
-            <p>FN #1: Star NGC 1750 1213</p>
+            <p>FN #1: Star NGC 1750 1213(DF:01/01/25)</p>
         </div>
         <div class="image-card">
             <img src="image2.jpg" alt="FN #2">
-            <p>FN #2: Satellite STARLINK-31604 (Fieldnomer Satellite)</p>
+            <p>FN #2: Satellite STARLINK-31604 (Fieldnomer Satellite)(DF:01/01/25)</p>
         </div>
         <div class="image-card">
             <img src="image3.jpg" alt="FN #3">
-            <p>FN #3: Star Cluster Pleiades</p>
+            <p>FN #3: Star Cluster Pleiades(DF:01/01/25)</p>
         </div>
     </section>
 
