--- a/fn/index.html
+++ b/fn/index.html
@@ -29,6 +29,18 @@
             <img src="image3.jpg" alt="FN #3">
             <p>FN #3: Star Cluster Pleiades(DF:01/01/25)</p>
         </div>
+            <div class="image-card">
+            <img src="image4.jpg" alt="FN #4">
+            <p>FN #4: Star Alphard(DF:01/02/25)</p>
+        </div>
+            <div class="image-card">
+            <img src="image5.jpg" alt="FN #5">
+            <p>FN #5: Star 24 Hydrae(DF:01/02/25)</p>
+        </div>
+            <div class="image-card">
+            <img src="image6.jpg" alt="FN #6">
+            <p>FN #6: Galaxy PG 1000873(DF:01/02/25)</p>
+        </div>
     </section>
 
     <footer>
