--- a/lmd/index.html
+++ b/lmd/index.html
@@ -25,7 +25,7 @@
             }
 
             // CORS Anywhere proxy URL
-            const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
+            const proxyUrl = 'https://corsproxy.io?url=';
 
             // Make the fetch request via the CORS proxy
             fetch(proxyUrl + url)
